--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Trees">
-        <activity android:name=".at"></activity>
+        <activity android:name=".verify_bst"></activity>
+        <activity android:name=".at" />
         <activity android:name=".st" />
         <activity android:name=".bt_reqt" />
         <activity android:name=".bt" />
